Made a splash screen that can be used when the app opens and is loading. Currently set to invisible from the start

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" >
+            android:label="MemoryMap" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
